<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github.thenestruo</groupId>
	<artifactId>thenestruo-parent</artifactId>
	<version>2026.6</version>
	<packaging>pom</packaging>

	<modules>
		<module>thenestruo-cli-parent</module>
		<module>thenestruo-commons</module>
		<module>thenestruo-commons-msx</module>
	</modules>

	<properties>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<maven.version.required>3.6.3</maven.version.required>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<thenestruo.version>2026.6</thenestruo.version>

		<!-- Dependency management -->
		<commons-cli.version>1.11.0</commons-cli.version>
		<commons-csv.version>1.14.1</commons-csv.version>
		<commons-collections4.version>4.5.0</commons-collections4.version>
		<commons-lang3.version>3.20.0</commons-lang3.version>
		<commons-io.version>2.22.0</commons-io.version>
		<jackson.version>3.1.4</jackson.version>
		<jakarta.xml.bind.version>4.0.5</jakarta.xml.bind.version>
		<junit.version>6.1.0</junit.version>
		<picocli.version>4.7.7</picocli.version>
		<spotbugs.version>4.9.8</spotbugs.version>
		<tinylog.version>2.7.0</tinylog.version>

		<!-- Plugin management -->
		<maven-enforcer-plugin.version>3.6.3</maven-enforcer-plugin.version>
		<exec-maven-plugin.version>3.6.3</exec-maven-plugin.version>
		<extra-enforcer-rules.version>1.12.0</extra-enforcer-rules.version>
		<maven-shade-plugin.version>3.6.2</maven-shade-plugin.version>
		<versions-maven-plugin.version>2.21.0</versions-maven-plugin.version>
		<modernizer-maven-plugin.version>3.4.0</modernizer-maven-plugin.version>
		<spotbugs-maven-plugin.version>4.9.8.3</spotbugs-maven-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>

			<!-- theNestruo -->
			<dependency>
				<groupId>com.github.thenestruo</groupId>
				<artifactId>thenestruo-commons</artifactId>
				<version>${thenestruo.version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.thenestruo</groupId>
				<artifactId>thenestruo-commons-msx</artifactId>
				<version>${thenestruo.version}</version>
			</dependency>

			<!-- Apache Commons -->
			<dependency>
				<groupId>commons-cli</groupId>
				<artifactId>commons-cli</artifactId>
				<version>${commons-cli.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-csv</artifactId>
				<version>${commons-csv.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-collections4</artifactId>
				<version>${commons-collections4.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${commons-lang3.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.version}</version>
			</dependency>

			<!-- Jackson -->
			<dependency>
				<groupId>tools.jackson</groupId>
				<artifactId>jackson-bom</artifactId>
				<version>${jackson.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- Jakarta XML Binding -->
			<dependency>
				<groupId>jakarta.xml.bind</groupId>
				<artifactId>jakarta.xml.bind-api</artifactId>
				<version>${jakarta.xml.bind.version}</version>
			</dependency>

			<!-- JUnit -->
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>${junit.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- Picocli -->
			<dependency>
				<groupId>info.picocli</groupId>
				<artifactId>picocli</artifactId>
				<version>${picocli.version}</version>
			</dependency>

			<!-- SpotBugs -->
			<dependency>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-annotations</artifactId>
				<version>${spotbugs.version}</version>
			</dependency>

			<!-- tinylog -->
			<dependency>
				<groupId>org.tinylog</groupId>
				<artifactId>tinylog-api</artifactId>
				<version>${tinylog.version}</version>
			</dependency>
			<dependency>
				<groupId>org.tinylog</groupId>
				<artifactId>tinylog-impl</artifactId>
				<version>${tinylog.version}</version>
			</dependency>
			<dependency>
				<groupId>org.tinylog</groupId>
				<artifactId>slf4j-tinylog</artifactId>
				<version>${tinylog.version}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<!-- == Build Settings == -->

	<build>
		<pluginManagement>
			<plugins>

				<!-- Enforces certain Maven versions and dependencies bytecode version -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-enforcer-plugin</artifactId>
					<version>${maven-enforcer-plugin.version}</version>
					<dependencies>
						<dependency>
							<groupId>org.codehaus.mojo</groupId>
							<artifactId>extra-enforcer-rules</artifactId>
							<version>${extra-enforcer-rules.version}</version>
						</dependency>
					</dependencies>
					<executions>
						<execution>
							<id>enforce-maven</id>
							<!-- <phase>validate</phase> -->
							<goals>
								<goal>enforce</goal>
							</goals>
							<configuration>
								<rules>
									<requireMavenVersion>
										<version>${maven.version.required}</version>
									</requireMavenVersion>
									<enforceBytecodeVersion>
										<maxJdkVersion>${maven.compiler.target}</maxJdkVersion>
									</enforceBytecodeVersion>
								</rules>
							</configuration>
						</execution>
					</executions>
				</plugin>

				<!-- Displays all dependencies and plugins that have newer versions available -->
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>${versions-maven-plugin.version}</version>
					<executions>
						<execution>
							<id>display-dependency-updates</id>
							<phase>verify</phase>
							<goals>
								<goal>display-dependency-updates</goal>
							</goals>
						</execution>
						<execution>
							<id>display-parent-updates</id>
							<phase>verify</phase>
							<goals>
								<goal>display-parent-updates</goal>
							</goals>
						</execution>
						<execution>
							<id>display-plugin-updates</id>
							<phase>verify</phase>
							<goals>
								<goal>display-plugin-updates</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<ignoredVersions>.+-M.,.+-RC.,.+-rc.</ignoredVersions>
					</configuration>
				</plugin>

				<!-- Find bugs in Java programs -->
				<plugin>
					<groupId>com.github.spotbugs</groupId>
					<artifactId>spotbugs-maven-plugin</artifactId>
					<version>${spotbugs-maven-plugin.version}</version>
					<dependencies>
						<dependency>
							<groupId>com.github.spotbugs</groupId>
							<artifactId>spotbugs</artifactId>
							<version>${spotbugs.version}</version>
						</dependency>
					</dependencies>
					<executions>
						<execution>
							<id>spotbugs-spotbugs</id>
							<phase>verify</phase>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

				<!-- Detects uses of legacy APIs which modern Java versions supersede -->
				<plugin>
					<groupId>org.gaul</groupId>
					<artifactId>modernizer-maven-plugin</artifactId>
					<version>${modernizer-maven-plugin.version}</version>
					<executions>
						<execution>
							<id>modernizer</id>
							<phase>verify</phase>
							<goals>
								<goal>modernizer</goal>
							</goals>
							<configuration>
								<failOnViolations>false</failOnViolations>
								<javaVersion>${maven.compiler.target}</javaVersion>
							</configuration>
						</execution>
					</executions>
				</plugin>

			</plugins>
		</pluginManagement>

		<plugins>

			<!-- Enforces certain Maven versions and dependencies bytecode version -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
			</plugin>

			<!-- Displays all dependencies and plugins that have newer versions available
			 	Commented out in favour of dependabot.yml
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
			</plugin> -->

			<!-- Find bugs in Java programs -->
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
			</plugin>

			<!-- Detects uses of legacy APIs which modern Java versions supersede -->
			<plugin>
				<groupId>org.gaul</groupId>
				<artifactId>modernizer-maven-plugin</artifactId>
			</plugin>

		</plugins>
	</build>

	<!-- == More Project Information == -->

	<description>(theNestruo) Parent POM</description>

	<url>https://github.com/theNestruo/thenestruo-parent</url>

	<licenses>
		<license>
			<name>Apache-2.0 license</name>
			<url>https://github.com/theNestruo/thenestruo-parent/blob/main/LICENSE</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>theNestruo</id>
		</developer>
	</developers>

	<!-- == Environment Settings == -->

	<scm>
		<developerConnection>scm:git:https://github.com/theNestruo/thenestruo-parent.git</developerConnection>
	</scm>

	<repositories>
		<repository>
			<id>central</id>
			<url>https://repo1.maven.org/maven2</url>
		</repository>
		<repository>
			<id>github</id>
			<name>GitHub theNestruo Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/theNestruo/thenestruo-parent</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub theNestruo Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/theNestruo/thenestruo-parent</url>
		</repository>
		<snapshotRepository>
			<id>github</id>
			<name>GitHub theNestruo Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/theNestruo/thenestruo-parent</url>
		</snapshotRepository>
	</distributionManagement>

</project>
